[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = "0.6"
pretty_env_logger = "0.4.0"
routerify = "3"
hyper-staticfile = "0.8.0"
futures-util = "0.3.19"
http = "0.2.6"